Refactor: sederhanakan rendering lebah, merapikan warna

--- a/Uas_Grafkom/Uas_Grafkom.vcxproj
+++ b/Uas_Grafkom/Uas_Grafkom.vcxproj
@@ -126,7 +126,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Uas_Grafkom.cpp" />
+    <ClCompile Include="Uas_Grafkom.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">C:\Project Sem 5\Grafika Komputer\freeglut\freeglut</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">C:\Project Sem 5\Grafika Komputer\freeglut\freeglut</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Project Sem 5\Grafika Komputer\freeglut\freeglut</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Project Sem 5\Grafika Komputer\freeglut\freeglut</AdditionalIncludeDirectories>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
